[tool.poetry]
name = "levelz_dp_generator"
version = "0.1.0"
description = "Simple datapack generator for [LevelZ](https://github.com/Globox1997/LevelZ) minecraft mod"
authors = ["@FieryDruid"]

[tool.poetry.dependencies]
python = "~3.10"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
